Fix mobile layout issues, add home link

--- a/site/theme/static/assets/css/main.css
+++ b/site/theme/static/assets/css/main.css
@@ -7728,6 +7728,12 @@ p {
 .navbar-brand img {
   max-height: 32px;
 }
+.navbar .input-group {
+  max-width: 200px;
+}
+.navbar .navbar-form {
+  border: 0;
+}
 .img-header {
   max-width: 100%;
   border-radius: 3px;
