--- a/site/theme/static/assets/less/style.less
+++ b/site/theme/static/assets/less/style.less
@@ -2,7 +2,16 @@
   img {
     max-height: 32px;
   }
+}
 
+.navbar {
+  .input-group {
+    max-width: 200px;
+  }
+
+  .navbar-form {
+    border: 0;
+  }
 }
 
 
